# dyana

./: .gitignore  README.md  analysis_params.py  atomic_properties.py  config.json  config_builder.py  config_schema.py  constants.py  geometry.py  input_providers.py  main.py  output_metadata.py  pyproject.toml  utils.py  workflow_prompts.py
analyses/: __init__.py  adf3b_analysis.py  adf_analysis.py  adf_threebody_analysis.py  base_analysis.py  bu_cluster_analysis.py  bu_perc2d.py  cdf_analysis.py  charge_msd.py  charge_msd_analysis.py  cluster_analysis.py  dacf_analysis.py  density_analysis.py  histogram.py  metrics.py  neighbor_count.py  neighbor_count_analysis.py  pccf_analysis.py  percolation.py  percolation_analysis.py  rdf_analysis.py  selection.py  surface_voronoi.py  tmp  top_analysis.py
analyses/bu/: adf_analysis.py
core/: __init__.py  trajectory_loader.py
docs/: analysis_framework_checklist.md  productionization_checklist.md
examples/: README.md
examples/xyz/test/: rdf_O_H.metadata.json
tests/: test_config_builder.py  test_config_schema.py  test_geometry.py  test_histogram.py  test_input_providers.py  test_labels.py  test_lammps_loader.py  test_output_metadata.py  test_rdf_config.py  test_trajectory_fixtures.py  test_workflow_prompts.py
tests/fixtures/: README.md  ca(bf4)2_thf.lmp  water128.xyz
