[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dyana"
version = "0.1.0"
description = "Molecular dynamics trajectory post-processing tools."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "networkx",
    "matplotlib",
]

[project.optional-dependencies]
voronoi = ["pyvoro"]
dev = ["pytest", "ruff"]

[project.scripts]
dyana = "main:cli"

[tool.setuptools]
py-modules = ["atomic_properties", "config_schema", "constants", "main", "utils"]
packages = ["analyses", "core"]

[tool.ruff]
line-length = 100
target-version = "py310"

